// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiArticle renders an article and fetches article data from Wikipedia if not provided 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(WikiArticle)>
    <WikiArticle
      dispatchArticle={[Function]}
    >
      <article
        className="wa style-0"
        data-id="someId"
      >
        <div
          className="wa-header has-image"
        >
          <div
            aria-describedby="summary-someId"
            aria-labelledby="title-someId"
            className="wa-img"
            role="img"
            style={
              Object {
                "backgroundImage": "url('someimage.png')",
              }
            }
          />
          <div
            className="wa-header-content"
          >
            <h2
              className="wa-title"
            >
              Some Title
            </h2>
            <h3
              className="wa-description"
            >
              some description
            </h3>
          </div>
        </div>
        <div
          className="wa-content"
        >
          <p
            className="wa-summary"
            id="summary-someId"
          >
            some extract
          </p>
          <a
            href="someDesktopUrl.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Test Link
          </a>
        </div>
      </article>
    </WikiArticle>
  </Connect(WikiArticle)>
</Provider>
`;

exports[`WikiArticle should not fetch article data if provided 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(WikiArticle)
    description="Some description"
    id="someId"
    summary="Some summary."
    title="Some Title"
  >
    <WikiArticle
      description="Some description"
      dispatchArticle={[Function]}
      id="someId"
      summary="Some summary."
      title="Some Title"
    >
      <article
        className="wa style-0"
        data-id="someId"
      >
        <div
          className="wa-header"
        >
          <div
            className="wa-header-content"
          >
            <h2
              className="wa-title"
            >
              Some Title
            </h2>
            <h3
              className="wa-description"
            >
              Some description
            </h3>
          </div>
        </div>
        <div
          className="wa-content"
        >
          <p
            className="wa-summary"
            id="summary-someId"
          >
            Some summary.
          </p>
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            Test Link
          </a>
        </div>
      </article>
    </WikiArticle>
  </Connect(WikiArticle)>
</Provider>
`;
